# app/hrefs.go
@@ -1,16 +1,29 @@
 // Code generated by goagen v1.2.0, DO NOT EDIT.
 //
-// API "appengine": Application Resource Href Factories
+// API "GAE Chat API": Application Resource Href Factories
 //
 // Command:
 // $ goagen
-// --design=github.com/m0a-mystudy/appengine01/design
-// --out=$(GOPATH)/src/github.com/m0a-mystudy/appengine01
+// --design=github.com/m0a-mystudy/gae-chat/design
+// --out=$(GOPATH)/src/github.com/m0a-mystudy/gae-chat
 // --version=v1.3.0
 
 package app
 
-// HelloHref returns the resource href.
-func HelloHref() string {
-	return "/hello"
+import (
+	"fmt"
+	"strings"
+)
+
+// MessageHref returns the resource href.
+func MessageHref(roomID, messageID interface{}) string {
+	paramroomID := strings.TrimLeftFunc(fmt.Sprintf("%v", roomID), func(r rune) bool { return r == '/' })
+	parammessageID := strings.TrimLeftFunc(fmt.Sprintf("%v", messageID), func(r rune) bool { return r == '/' })
+	return fmt.Sprintf("/api/rooms/%v/messages/%v", paramroomID, parammessageID)
+}
+
+// RoomHref returns the resource href.
+func RoomHref(roomID interface{}) string {
+	paramroomID := strings.TrimLeftFunc(fmt.Sprintf("%v", roomID), func(r rune) bool { return r == '/' })
+	return fmt.Sprintf("/api/rooms/%v", paramroomID)
 }
