# app/media_types.go
@@ -1,18 +1,123 @@
 // Code generated by goagen v1.2.0, DO NOT EDIT.
 //
-// API "appengine": Application Media Types
+// API "GAE Chat API": Application Media Types
 //
 // Command:
 // $ goagen
-// --design=github.com/m0a-mystudy/appengine01/design
-// --out=$(GOPATH)/src/github.com/m0a-mystudy/appengine01
+// --design=github.com/m0a-mystudy/gae-chat/design
+// --out=$(GOPATH)/src/github.com/m0a-mystudy/gae-chat
 // --version=v1.3.0
 
 package app
 
-// example MediaType (default view)
+import (
+	"github.com/goadesign/goa"
+	"time"
+	"unicode/utf8"
+)
+
+// A account (default view)
 //
-// Identifier: application/vnd.example+json; view=default
-type Example struct {
-	Message *string `form:"message,omitempty" json:"message,omitempty" xml:"message,omitempty"`
+// Identifier: application/vnd.account+json; view=default
+type Account struct {
+	// Date of creation
+	Created time.Time `form:"created" json:"created" xml:"created"`
+	// ID of room
+	ID int `form:"id" json:"id" xml:"id"`
+}
+
+// Validate validates the Account media type instance.
+func (mt *Account) Validate() (err error) {
+
+	return
+}
+
+// A Message (default view)
+//
+// Identifier: application/vnd.message+json; view=default
+type Message struct {
+	Body         string    `form:"body" json:"body" xml:"body"`
+	GoogleUserID string    `form:"googleUserID" json:"googleUserID" xml:"googleUserID"`
+	PostDate     time.Time `form:"postDate" json:"postDate" xml:"postDate"`
+}
+
+// Validate validates the Message media type instance.
+func (mt *Message) Validate() (err error) {
+	if mt.GoogleUserID == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "googleUserID"))
+	}
+	if mt.Body == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "body"))
+	}
+
+	if utf8.RuneCountInString(mt.Body) < 1 {
+		err = goa.MergeErrors(err, goa.InvalidLengthError(`response.body`, mt.Body, utf8.RuneCountInString(mt.Body), 1, true))
+	}
+	if utf8.RuneCountInString(mt.Body) > 400 {
+		err = goa.MergeErrors(err, goa.InvalidLengthError(`response.body`, mt.Body, utf8.RuneCountInString(mt.Body), 400, false))
+	}
+	return
+}
+
+// A Message with account (default view)
+//
+// Identifier: application/vnd.message_with_account+json; view=default
+type MessageWithAccount struct {
+	Body         *string    `form:"body,omitempty" json:"body,omitempty" xml:"body,omitempty"`
+	Email        *string    `form:"email,omitempty" json:"email,omitempty" xml:"email,omitempty"`
+	GoogleUserID *string    `form:"googleUserID,omitempty" json:"googleUserID,omitempty" xml:"googleUserID,omitempty"`
+	ID           *int       `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
+	Image        *string    `form:"image,omitempty" json:"image,omitempty" xml:"image,omitempty"`
+	Name         *string    `form:"name,omitempty" json:"name,omitempty" xml:"name,omitempty"`
+	PostDate     *time.Time `form:"postDate,omitempty" json:"postDate,omitempty" xml:"postDate,omitempty"`
+}
+
+// Message_with_accountCollection is the media type for an array of Message_with_account (default view)
+//
+// Identifier: application/vnd.message_with_account+json; type=collection; view=default
+type MessageWithAccountCollection []*MessageWithAccount
+
+// A room (default view)
+//
+// Identifier: application/vnd.room+json; view=default
+type Room struct {
+	// Date of creation
+	Created *time.Time `form:"created,omitempty" json:"created,omitempty" xml:"created,omitempty"`
+	// description of room
+	Description string `form:"description" json:"description" xml:"description"`
+	// ID of room
+	ID *int `form:"id,omitempty" json:"id,omitempty" xml:"id,omitempty"`
+	// Name of room
+	Name string `form:"name" json:"name" xml:"name"`
+}
+
+// Validate validates the Room media type instance.
+func (mt *Room) Validate() (err error) {
+	if mt.Name == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "name"))
+	}
+	if mt.Description == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "description"))
+	}
+	if utf8.RuneCountInString(mt.Description) > 400 {
+		err = goa.MergeErrors(err, goa.InvalidLengthError(`response.description`, mt.Description, utf8.RuneCountInString(mt.Description), 400, false))
+	}
+	return
+}
+
+// RoomCollection is the media type for an array of Room (default view)
+//
+// Identifier: application/vnd.room+json; type=collection; view=default
+type RoomCollection []*Room
+
+// Validate validates the RoomCollection media type instance.
+func (mt RoomCollection) Validate() (err error) {
+	for _, e := range mt {
+		if e != nil {
+			if err2 := e.Validate(); err2 != nil {
+				err = goa.MergeErrors(err, err2)
+			}
+		}
+	}
+	return
 }
