# swagger/swagger.yaml
@@ -1,59 +1,444 @@
-basePath: /
+basePath: /api
 consumes:
 - application/json
 - application/xml
 - application/gob
 - application/x-gob
 definitions:
-  Example:
-    description: example MediaType (default view)
+  Message:
+    description: A Message (default view)
     example:
-      message: Hello
+      body: this is chat message
+      googleUserID: "12345678"
+      postDate: 2012-02-25T14:57:31+09:00
     properties:
-      message:
-        example: Hello
+      body:
+        example: this is chat message
+        maxLength: 400
+        minLength: 1
         type: string
-    title: 'Mediatype identifier: application/vnd.example+json; view=default'
+      googleUserID:
+        example: "12345678"
+        type: string
+      postDate:
+        default: 1978-06-30T10:00:00+09:00
+        example: 2012-02-25T14:57:31+09:00
+        format: date-time
+        type: string
+    required:
+    - googleUserID
+    - body
+    - postDate
+    title: 'Mediatype identifier: application/vnd.message+json; view=default'
     type: object
-externalDocs:
-  description: goa guide
-  url: http://goa.design/getting-started.html
+  Message_with_account:
+    description: A Message with account (default view)
+    example:
+      body: In voluptas placeat est.
+      email: Occaecati explicabo eos ipsa dolorem accusantium.
+      googleUserID: Molestiae aut laboriosam.
+      id: 4.0552028e+18
+      image: Beatae occaecati temporibus consequatur molestias.
+      name: Aspernatur inventore aut fuga sed odio.
+      postDate: 1996-05-14T15:37:01+09:00
+    properties:
+      body:
+        example: In voluptas placeat est.
+        type: string
+      email:
+        example: Occaecati explicabo eos ipsa dolorem accusantium.
+        type: string
+      googleUserID:
+        example: Molestiae aut laboriosam.
+        type: string
+      id:
+        example: 4.0552028e+18
+        format: int64
+        type: integer
+      image:
+        example: Beatae occaecati temporibus consequatur molestias.
+        type: string
+      name:
+        example: Aspernatur inventore aut fuga sed odio.
+        type: string
+      postDate:
+        example: 1996-05-14T15:37:01+09:00
+        format: date-time
+        type: string
+    title: 'Mediatype identifier: application/vnd.message_with_account+json; view=default'
+    type: object
+  Message_with_accountCollection:
+    description: Message_with_accountCollection is the media type for an array of
+      Message_with_account (default view)
+    example:
+    - body: In voluptas placeat est.
+      email: Occaecati explicabo eos ipsa dolorem accusantium.
+      googleUserID: Molestiae aut laboriosam.
+      id: 4.0552028e+18
+      image: Beatae occaecati temporibus consequatur molestias.
+      name: Aspernatur inventore aut fuga sed odio.
+      postDate: 1996-05-14T15:37:01+09:00
+    - body: In voluptas placeat est.
+      email: Occaecati explicabo eos ipsa dolorem accusantium.
+      googleUserID: Molestiae aut laboriosam.
+      id: 4.0552028e+18
+      image: Beatae occaecati temporibus consequatur molestias.
+      name: Aspernatur inventore aut fuga sed odio.
+      postDate: 1996-05-14T15:37:01+09:00
+    items:
+      $ref: '#/definitions/Message_with_account'
+    title: 'Mediatype identifier: application/vnd.message_with_account+json; type=collection;
+      view=default'
+    type: array
+  MessagePayload:
+    example:
+      body: this is chat message
+      googleUserID: "12345678"
+      postDate: 1997-11-03T20:24:29+09:00
+    properties:
+      body:
+        example: this is chat message
+        maxLength: 400
+        minLength: 1
+        type: string
+      googleUserID:
+        example: "12345678"
+        type: string
+      postDate:
+        default: 1978-06-30T10:00:00+09:00
+        example: 1997-11-03T20:24:29+09:00
+        format: date-time
+        type: string
+    required:
+    - body
+    - postDate
+    title: MessagePayload
+    type: object
+  Room:
+    description: A room (default view)
+    example:
+      created: 1998-08-24T01:31:34+09:00
+      description: room description
+      id: 1.7332972e+18
+      name: room001
+    properties:
+      created:
+        description: Date of creation
+        example: 1998-08-24T01:31:34+09:00
+        format: date-time
+        type: string
+      description:
+        description: description of room
+        example: room description
+        maxLength: 400
+        type: string
+      id:
+        description: ID of room
+        example: 1.7332972e+18
+        format: int64
+        type: integer
+      name:
+        description: Name of room
+        example: room001
+        type: string
+    required:
+    - name
+    - description
+    title: 'Mediatype identifier: application/vnd.room+json; view=default'
+    type: object
+  RoomCollection:
+    description: RoomCollection is the media type for an array of Room (default view)
+    example:
+    - created: 1998-08-24T01:31:34+09:00
+      description: room description
+      id: 1.7332972e+18
+      name: room001
+    items:
+      $ref: '#/definitions/Room'
+    title: 'Mediatype identifier: application/vnd.room+json; type=collection; view=default'
+    type: array
+  RoomPayload:
+    example:
+      created: 2006-06-06T13:07:42+09:00
+      description: room description
+      id: 6.822046e+18
+      name: room001
+    properties:
+      created:
+        description: Date of creation
+        example: 2006-06-06T13:07:42+09:00
+        format: date-time
+        type: string
+      description:
+        description: description of room
+        example: room description
+        maxLength: 400
+        type: string
+      id:
+        description: ID of room
+        example: 6.822046e+18
+        format: int64
+        type: integer
+      name:
+        description: Name of room
+        example: room001
+        type: string
+    required:
+    - name
+    - description
+    title: RoomPayload
+    type: object
+  error:
+    description: Error response media type (default view)
+    example:
+      code: invalid_value
+      detail: Value of ID must be an integer
+      id: 3F1FKVRR
+      meta:
+        timestamp: 1.458609e+09
+      status: "400"
+    properties:
+      code:
+        description: an application-specific error code, expressed as a string value.
+        example: invalid_value
+        type: string
+      detail:
+        description: a human-readable explanation specific to this occurrence of the
+          problem.
+        example: Value of ID must be an integer
+        type: string
+      id:
+        description: a unique identifier for this particular occurrence of the problem.
+        example: 3F1FKVRR
+        type: string
+      meta:
+        additionalProperties: true
+        description: a meta object containing non-standard meta-information about
+          the error.
+        example:
+          timestamp: 1.458609e+09
+        type: object
+      status:
+        description: the HTTP status code applicable to this problem, expressed as
+          a string value.
+        example: "400"
+        type: string
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
 host: localhost:8080
 info:
-  contact:
-    email: admin@goa.design
-    name: goa team
-    url: http://goa.design
-  description: A simple appengine example
-  license:
-    name: MIT
-    url: https://github.com/goadesign/goa/blob/master/LICENSE
-  title: The appengine example
+  description: goa study chat api
+  title: goa study chat
   version: ""
 paths:
-  /hello:
+  /rooms:
     get:
-      operationId: hello#show
+      description: Retrieve all rooms.
+      operationId: room#list
+      parameters:
+      - in: query
+        name: limit
+        required: false
+        type: integer
+      - in: query
+        name: offset
+        required: false
+        type: integer
       produces:
-      - application/vnd.goa.error
-      - application/vnd.example+json
+      - application/vnd.room+json; type=collection
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/Example'
+            $ref: '#/definitions/RoomCollection'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      summary: list room
+      tags:
+      - room
+    post:
+      description: |-
+        Create new Room
+
+        Required security scopes:
+          * `api:access`
+      operationId: room#post
+      parameters:
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/RoomPayload'
+      responses:
+        "201":
+          description: Resource created
+          headers:
+            Location:
+              description: href to created resource
+              pattern: /rooms/[0-9]+
+              type: string
         "400":
           description: Bad Request
       schemes:
       - http
-      summary: show hello
+      security:
+      - jwt:
+        - api:access
+      summary: post room
       tags:
-      - hello
+      - room
+  /rooms/{roomID}:
+    get:
+      description: Retrieve room with given id
+      operationId: room#show
+      parameters:
+      - in: path
+        name: roomID
+        required: true
+        type: integer
+      produces:
+      - application/vnd.goa.error
+      - application/vnd.room+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Room'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      summary: show room
+      tags:
+      - room
+  /rooms/{roomID}/messages:
+    get:
+      description: Retrieve all messages.
+      operationId: message#list
+      parameters:
+      - in: query
+        name: limit
+        required: false
+        type: integer
+      - in: query
+        name: offset
+        required: false
+        type: integer
+      - in: path
+        name: roomID
+        required: true
+        type: integer
+      produces:
+      - application/vnd.message_with_account+json; type=collection
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Message_with_accountCollection'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      summary: list message
+      tags:
+      - message
+    post:
+      description: |-
+        Create new message
+
+        Required security scopes:
+          * `api:access`
+      operationId: message#post
+      parameters:
+      - in: path
+        name: roomID
+        required: true
+        type: integer
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/MessagePayload'
+      responses:
+        "201":
+          description: Resource created
+          headers:
+            Location:
+              description: href to created resource
+              pattern: ^/rooms/[0-9]+/messages/[0-9]+$
+              type: string
+        "400":
+          description: Bad Request
+      schemes:
+      - http
+      security:
+      - jwt:
+        - api:access
+      summary: post message
+      tags:
+      - message
+  /rooms/{roomID}/messages/{messageID}:
+    get:
+      description: Retrieve message with given id
+      operationId: message#show
+      parameters:
+      - in: path
+        name: messageID
+        required: true
+        type: integer
+      - in: path
+        name: roomID
+        required: true
+        type: integer
+      produces:
+      - application/vnd.goa.error
+      - application/vnd.message+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Message'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      summary: show message
+      tags:
+      - message
 produces:
 - application/json
 - application/xml
 - application/gob
 - application/x-gob
+responses:
+  BadRequest:
+    description: Bad Request
+  NotFound:
+    description: Not Found
+  OK:
+    description: OK
+    schema:
+      $ref: '#/definitions/Message'
 schemes:
 - http
+securityDefinitions:
+  jwt:
+    description: |2-
+
+
+      **Security Scopes**:
+        * `api:access`: API access
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
